--- a/Backend/TravelEasy/src/main/resources/application.properties
+++ b/Backend/TravelEasy/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=TravelEasy
+spring.application.name=Traveleasy
+
+spring.datasource.url=jdbc:mysql://localhost:3306/traveleasy?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=manasa
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
