--- a/Backend/TravelEasy/pom.xml
+++ b/Backend/TravelEasy/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>5.8.1</version> <!-- Make sure to check for the latest version -->
+		</dependency>
 	</dependencies>
 
 	<build>
