solving all issues integrating

--- a/Backend/TravelEasy/src/main/resources/application.properties
+++ b/Backend/TravelEasy/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Traveleasy
 
 spring.datasource.url=jdbc:mysql://localhost:3306/traveleasy?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Charan@567
+spring.datasource.password=manasa
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
